--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,7 @@
 }
 .container {
   height: 100vh;
-  padding: 150px 20px;
+  padding: 80px;
   background-image: linear-gradient(
     to right top,
     #051937,
