--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
 }
 .container {
   height: 100vh;
-  padding: 80px;
   background-image: linear-gradient(
     to right top,
     #051937,
@@ -14,4 +15,7 @@
     #009ba4,
     #00c9ac
   );
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
